--- a/public/css/util.css
+++ b/public/css/util.css
@@ -2967,7 +2967,7 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 	font-family: Courgette;
 	font-size: 30px;
 	line-height: 1.2;
-	color: #d61c22;
+	color: #9E1F54;
 }
 
 .tit3 {
@@ -3078,7 +3078,7 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 	font-weight: 400;
 	font-size: 12px;
 	line-height: 1.1;
-	color: #ec1d25;
+	color: #9E1F54;
 	text-transform: uppercase;
 }
 
@@ -3113,7 +3113,7 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 	font-family: Montserrat;
 	font-weight: 700;
 	font-size: 50px;
-	color: #ec1d25;
+	color: #9E1F54;
 	line-height: 1.1;
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -3181,7 +3181,7 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 	font-family: Montserrat;
 	font-weight: 400;
 	font-size: 13px;
-	color: #ec1d25;
+	color: #9E1F54;
 	line-height: 1.7;
 }
 
@@ -3256,7 +3256,7 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 	font-weight: 400;
 	font-size: 15px;
 	line-height: 1.7;
-	color: #ec1d25;
+	color: #9E1F54;
 }
 
 .txt25 {
@@ -3363,12 +3363,12 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 /*[ Color ]
 -----------------------------------------------------------
 */
-.color0 {color: #ec1d25;}
+.color0 {color: #9E1F54;}
 .color1 {color: #222222;}
 .color2 {color: #cccccc;}
 .color3 {color: #333333;}
 
-.color0-hov:hover {color: #ec1d25;}
+.color0-hov:hover {color: #9E1F54;}
 
 
 
@@ -3562,11 +3562,11 @@ SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE
 /*[ Background Color ]
 -----------------------------------------------------------
 */
-.bg0 {background-color: #ec1d25;}
+.bg0 {background-color: #9E1F54;}
 .bg1 {background-color: #222222;}
 .bg2 {background-color: #111111;}
 
-.bg0-hov:hover {background-color: #ec1d25;}
+.bg0-hov:hover {background-color: #9E1F54;}
 
 .bg1-overlay {background-color: rgba(0,0,0,0.35);}
 
@@ -3576,7 +3576,7 @@ SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE
 */
 .bo1 {border: 1px solid #ebebeb;}
 .bo2 {border: 2px solid #d9d9d9;}
-.bo4 {border: 4px solid #ec1d25;}
+.bo4 {border: 4px solid #9E1F54;}
 
 .bo5-b {border-bottom: 1px solid #e6e6e6;}
 .bo5-r {border-right: 1px solid #e6e6e6;}
@@ -3719,7 +3719,7 @@ EFFECT   EFFECT   EFFECT   EFFECT   EFFECT   EFFECT  EFFECT
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
   transform: scale(1.2);
-  background-color: rgba(236,29,37,0.5);
+  background-color: rgba(236, 29, 174, 0.5);
   color: white;
 }
 
